--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
